2nd pass at README after define a more concrete design